--- a/WithoutKD/WithoutKD_EfficientNet.ipynb
+++ b/WithoutKD/WithoutKD_EfficientNet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WithoutKD_EfficientNet.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +17,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mshitie/KD-lesions/blob/main/WithoutKD/WithoutKD_EfficientNet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -30,7 +40,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +74,7 @@
         "\n",
         "import time"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +101,7 @@
         "from keras.losses import categorical_crossentropy as logloss\n",
         "from keras.metrics import categorical_accuracy"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +120,7 @@
         "malign_test = np.load('/content/drive/MyDrive/CSE499/numpy/malign_test.npy')\n",
         "print('Done Loaded :)')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +147,7 @@
         "print(f'Benign Test:',benign_test.shape)\n",
         "print(f'Malignant Test',malign_test.shape)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +170,7 @@
         "benign_train_label = np.zeros(len(benign_train),dtype=float)\n",
         "malign_train_label = np.ones(len(malign_train),dtype=float)\n",
         "benign_test_label = np.zeros(len(benign_test),dtype=float)\n",
-        "malign_test_label = np.ones(len(malign_test),dtype=float) \n",
+        "malign_test_label = np.ones(len(malign_test),dtype=float)\n",
         "\n",
         "X_train = np.concatenate((benign_train, malign_train), axis = 0)\n",
         "Y_train = np.concatenate((benign_train_label, malign_train_label), axis = 0)\n",
@@ -180,7 +190,7 @@
         "Y_train = to_categorical(Y_train, num_classes= 2)\n",
         "Y_test = to_categorical(Y_test, num_classes= 2)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +208,7 @@
         "print(f'Y train shape:',Y_train.shape)\n",
         "print(f'Y test shape:',Y_test.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +230,7 @@
       "source": [
         "x_train, x_val, y_train, y_val = train_test_split(X_train, Y_train, test_size=0.2, random_state=10)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +248,7 @@
         "print(f'y train shape:',y_train.shape)\n",
         "print(f'y val shape:',y_val.shape)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,13 +281,13 @@
         "  effmodel.add(layers.Dropout(0.5))\n",
         "  effmodel.add(layers.BatchNormalization())\n",
         "  effmodel.add(layers.Dense(2 , activation='softmax'))\n",
-        "  \n",
+        "\n",
         "  effmodel.compile(\n",
         "        loss='categorical_crossentropy',\n",
         "        optimizer=Adam(learning_rate=lr),\n",
         "        metrics=['accuracy']\n",
         "    )\n",
-        "    \n",
+        "\n",
         "  return effmodel\n",
         "\n",
         "\n",
@@ -286,12 +296,12 @@
         "    include_top = False,\n",
         "    input_shape =(224 , 224 , 3)\n",
         ")\n",
-        "#call the model \n",
+        "#call the model\n",
         "effmodel = eff_model(EfficientNet , lr = 1e-4)\n",
         "effmodel.build((None, 224, 224, 3))\n",
         "effmodel.summary()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +355,7 @@
         "          verbose=1,\n",
         "          validation_data=(x_val, y_val))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +426,7 @@
         "plt.legend(['train', 'val'], loc='lower right')\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -451,7 +461,7 @@
         "plt.legend(['train', 'val'], loc='lower left')\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -478,7 +488,7 @@
         "Y_val_pred = effmodel.predict(x_val)\n",
         "print(f'The Teacher model Accuracy on the Validation Set:',accuracy_score(np.argmax(y_val, axis=1), np.argmax(Y_val_pred, axis=1)))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,7 +512,7 @@
         "#Now let's check my Y_test values\n",
         "print(f'My Y_test values are:\\n' ,Y_test)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +540,7 @@
         "outputId": "570c73bb-af0c-475a-aafe-cd713b80c80a"
       },
       "source": [
-        "#Now let's check my predcited values from X_test dataset\t\n",
+        "#Now let's check my predcited values from X_test dataset\n",
         "# And calculate the y_pred with time\n",
         "import timeit\n",
         "\n",
@@ -542,7 +552,7 @@
         "stop = timeit.default_timer()\n",
         "print('\\nTime: ',stop - start,'sec')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +585,7 @@
         "#Now let's check the accuracy between the original & predicted (Y_test , y_pred)\n",
         "print(f'My accuracy:',accuracy_score(np.argmax(Y_test, axis=1), np.argmax(y_pred, axis=1)))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +609,7 @@
         "# Print the classification report\n",
         "print(classification_report( np.argmax(Y_test, axis=1), np.argmax(y_pred, axis=1)))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
