--- a/WithoutKD/WithoutKD_InceptionV3.ipynb
+++ b/WithoutKD/WithoutKD_InceptionV3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WithoutKD_InceptionV3.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +17,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mshitie/KD-lesions/blob/main/WithoutKD/WithoutKD_InceptionV3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -30,7 +40,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +74,7 @@
         "\n",
         "import time"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +101,7 @@
         "from keras.losses import categorical_crossentropy as logloss\n",
         "from keras.metrics import categorical_accuracy"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +120,7 @@
         "malign_test = np.load('/content/drive/MyDrive/CSE499/numpy/malign_test.npy')\n",
         "print('Done Loaded :)')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +147,7 @@
         "print(f'Benign Test:',benign_test.shape)\n",
         "print(f'Malignant Test',malign_test.shape)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +170,7 @@
         "benign_train_label = np.zeros(len(benign_train),dtype=float)\n",
         "malign_train_label = np.ones(len(malign_train),dtype=float)\n",
         "benign_test_label = np.zeros(len(benign_test),dtype=float)\n",
-        "malign_test_label = np.ones(len(malign_test),dtype=float) \n",
+        "malign_test_label = np.ones(len(malign_test),dtype=float)\n",
         "\n",
         "X_train = np.concatenate((benign_train, malign_train), axis = 0)\n",
         "Y_train = np.concatenate((benign_train_label, malign_train_label), axis = 0)\n",
@@ -180,7 +190,7 @@
         "Y_train = to_categorical(Y_train, num_classes= 2)\n",
         "Y_test = to_categorical(Y_test, num_classes= 2)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +208,7 @@
         "print(f'Y train shape:',Y_train.shape)\n",
         "print(f'Y test shape:',Y_test.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +230,7 @@
       "source": [
         "x_train, x_val, y_train, y_val = train_test_split(X_train, Y_train, test_size=0.2, random_state=10)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +248,7 @@
         "print(f'y train shape:',y_train.shape)\n",
         "print(f'y val shape:',y_val.shape)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,13 +281,13 @@
         "  modelInceptionV3.add(layers.Dropout(0.5))\n",
         "  modelInceptionV3.add(layers.BatchNormalization())\n",
         "  modelInceptionV3.add(layers.Dense(2 , activation='softmax'))\n",
-        "  \n",
+        "\n",
         "  modelInceptionV3.compile(\n",
         "        loss='categorical_crossentropy',\n",
         "        optimizer=Adam(learning_rate=lr),\n",
         "        metrics=['accuracy']\n",
         "    )\n",
-        "    \n",
+        "\n",
         "  return modelInceptionV3\n",
         "\n",
         "\n",
@@ -286,12 +296,12 @@
         "    include_top = False,\n",
         "    input_shape =(224 , 224 , 3)\n",
         ")\n",
-        "# call the model \n",
+        "# call the model\n",
         "modelInceptionV3 = inceptionV3_model(inceptionV3 , lr = 1e-4)\n",
         "modelInceptionV3.build((None, 224, 224, 3))\n",
         "modelInceptionV3.summary()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +354,7 @@
         "          verbose=1,\n",
         "          validation_data=(x_val, y_val))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +417,7 @@
         "Y_val_pred = modelInceptionV3.predict(x_val)\n",
         "print(f'The InceptionV3 model Accuracy on the Validation Set:',accuracy_score(np.argmax(y_val, axis=1), np.argmax(Y_val_pred, axis=1)))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +441,7 @@
         "#Now let's check my Y_test values\n",
         "print(f'My Y_test values are:\\n' ,Y_test)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +469,7 @@
         "outputId": "001d042f-8700-4350-c205-95c3e6ad93d7"
       },
       "source": [
-        "#Now let's check my predcited values from X_test dataset\t\n",
+        "#Now let's check my predcited values from X_test dataset\n",
         "import timeit\n",
         "\n",
         "start = timeit.default_timer()\n",
@@ -470,7 +480,7 @@
         "stop = timeit.default_timer()\n",
         "print('\\nTime: ',stop - start,'sec')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +513,7 @@
         "#Now let's check the accuracy between the original & predicted (Y_test , y_pred)\n",
         "print(f'My accuracy on Student model with InceptionV3 on the Test set is:',accuracy_score(np.argmax(Y_test, axis=1), np.argmax(y_pred, axis=1)))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +537,7 @@
         "# Print the classification report\n",
         "print(classification_report( np.argmax(Y_test, axis=1), np.argmax(y_pred, axis=1)))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
