--- a/WithoutKD/WithoutKD_MobileNet.ipynb
+++ b/WithoutKD/WithoutKD_MobileNet.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mshitie/KD-lesions/blob/main/WithoutKD/WithoutKD_MobileNet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "fPT49Q8m3qqm"
       },
@@ -52,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "q_xR3BGo3yvQ"
       },
@@ -79,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "S1-ip_Fx4CZj"
       },
@@ -145,7 +155,7 @@
         "benign_train_label = np.zeros(len(benign_train),dtype=float)\n",
         "malign_train_label = np.ones(len(malign_train),dtype=float)\n",
         "benign_test_label = np.zeros(len(benign_test),dtype=float)\n",
-        "malign_test_label = np.ones(len(malign_test),dtype=float) \n",
+        "malign_test_label = np.ones(len(malign_test),dtype=float)\n",
         "\n",
         "X_train = np.concatenate((benign_train, malign_train), axis = 0)\n",
         "Y_train = np.concatenate((benign_train_label, malign_train_label), axis = 0)\n",
@@ -168,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -197,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "UkVFxE9B4Ln0"
       },
@@ -208,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -237,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -289,13 +299,13 @@
         "  model1.add(layers.Dropout(0.5))\n",
         "  model1.add(layers.BatchNormalization())\n",
         "  model1.add(layers.Dense(2 , activation='softmax'))\n",
-        "  \n",
+        "\n",
         "  model1.compile(\n",
         "        loss='categorical_crossentropy',\n",
         "        optimizer=Adam(learning_rate=lr),\n",
         "        metrics=['accuracy']\n",
         "    )\n",
-        "    \n",
+        "\n",
         "  return model1\n",
         "\n",
         "\n",
@@ -304,7 +314,7 @@
         "    include_top = False,\n",
         "    input_shape =(224 , 224 , 3)\n",
         ")\n",
-        "#call the model \n",
+        "#call the model\n",
         "model1 = mobile_model1(mobilenet1 , lr = 1e-4)\n",
         "model1.build((None, 224, 224, 3))\n",
         "model1.summary()"
@@ -312,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -382,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -417,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -452,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -476,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -507,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -534,7 +544,7 @@
         }
       ],
       "source": [
-        "#Now let's check my predcited values from X_test dataset\t\n",
+        "#Now let's check my predcited values from X_test dataset\n",
         "# And calculate the y_pred with time\n",
         "import timeit\n",
         "\n",
@@ -549,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -573,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -605,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -638,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -708,7 +718,8 @@
     "accelerator": "GPU",
     "colab": {
       "name": "WithoutKD_MobileNet.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
