--- a/batch_training/Teacher&Student_Batch_18.ipynb
+++ b/batch_training/Teacher&Student_Batch_18.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Teacher&Student_Batch:18.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +17,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mshitie/MS_KD/blob/main/batch_training/Teacher%26Student_Batch_18.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -30,7 +40,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,7 +63,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +97,7 @@
         "import time\n",
         "import timeit"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +123,7 @@
         "from keras.losses import categorical_crossentropy as logloss\n",
         "from keras.metrics import categorical_accuracy"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +142,7 @@
         "malign_test = np.load('/content/drive/MyDrive/CSE465/Dataset/malign_test.npy')\n",
         "print('Done Loaded :)')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +169,7 @@
         "print(f'Benign Test:',benign_test.shape)\n",
         "print(f'Malignant Test',malign_test.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +201,7 @@
         "benign_train_label = np.zeros(len(benign_train),dtype=float)\n",
         "malign_train_label = np.ones(len(malign_train),dtype=float)\n",
         "benign_test_label = np.zeros(len(benign_test),dtype=float)\n",
-        "malign_test_label = np.ones(len(malign_test),dtype=float) \n",
+        "malign_test_label = np.ones(len(malign_test),dtype=float)\n",
         "\n",
         "X_train = np.concatenate((benign_train, malign_train), axis = 0)\n",
         "Y_train = np.concatenate((benign_train_label, malign_train_label), axis = 0)\n",
@@ -211,7 +221,7 @@
         "Y_train = to_categorical(Y_train, num_classes= 2)\n",
         "Y_test = to_categorical(Y_test, num_classes= 2)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +239,7 @@
         "print(f'Y train shape:',Y_train.shape)\n",
         "print(f'Y test shape:',Y_test.shape)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +270,7 @@
       "source": [
         "x_train, x_val, y_train, y_val = train_test_split(X_train, Y_train, test_size=0.2, random_state=10)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +288,7 @@
         "print(f'y train shape:',y_train.shape)\n",
         "print(f'y val shape:',y_val.shape)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,13 +320,13 @@
         "  model.add(layers.Dropout(0.5))\n",
         "  model.add(layers.BatchNormalization())\n",
         "  model.add(layers.Dense(2 , activation='softmax'))\n",
-        "  \n",
+        "\n",
         "  model.compile(\n",
         "        loss='categorical_crossentropy',\n",
         "        optimizer=Adam(learning_rate=1e-4),\n",
         "        metrics=['accuracy']\n",
         "    )\n",
-        "    \n",
+        "\n",
         "  return model\n",
         "\n",
         "resnet = ResNet50(\n",
@@ -324,12 +334,12 @@
         "    include_top = False,\n",
         "    input_shape = (224 , 224 , 3)\n",
         ")\n",
-        "# call the model \n",
+        "# call the model\n",
         "model = build_model(resnet , lr = 1e-4)\n",
         "model.build((None, 224, 224, 3))\n",
         "model.summary()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +383,7 @@
         "filepath=\"ResNet50weights.best.hdf5\"\n",
         "checkpoint = ModelCheckpoint(filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -390,10 +400,10 @@
         "# Train the teacher model as usual\n",
         "# Configuration\n",
         "import time\n",
-        "epochs = 10 \n",
+        "epochs = 10\n",
         "batch_size = 18\n",
         "\n",
-        "# Calculate the starting time    \n",
+        "# Calculate the starting time\n",
         "start_time = time.time()\n",
         "\n",
         "teacher_his = model.fit(x_train, y_train,\n",
@@ -407,7 +417,7 @@
         "end_time = time.time()\n",
         "print(\"--- Time taken to train : %s seconds ---\" % ((end_time - start_time)))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +543,7 @@
         "Y_val_pred = model.predict(x_val)\n",
         "print(f'The Teacher model Accuracy on the Validation Set:',accuracy_score(np.argmax(y_val, axis=1), np.argmax(Y_val_pred, axis=1)))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +567,7 @@
         "#Now let's check my Y_test values\n",
         "print(f'My Y_test values are:\\n' ,Y_test)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,7 +595,7 @@
         "outputId": "ad36b9b6-d66d-4d11-95a8-2d964ab4428f"
       },
       "source": [
-        "#Now let's check my predcited values from X_test dataset\t\n",
+        "#Now let's check my predcited values from X_test dataset\n",
         "# And calculate the y_pred with time\n",
         "import timeit\n",
         "\n",
@@ -597,7 +607,7 @@
         "stop = timeit.default_timer()\n",
         "print('\\nTime: ',stop - start,'sec')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +646,7 @@
         "stop = timeit.default_timer()\n",
         "print('\\nTime: ',stop - start,'sec')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +672,7 @@
         "# Classification_report\n",
         "print(f'Classification Report of Resnet50:\\n',classification_report(np.argmax(Y_test, axis=1), np.argmax(y_pred, axis=1)))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +744,7 @@
         "    plt.plot(fpr[i],tpr[i], color=color, lw=lw,\n",
         "             label='ROC curve of class {0} (area = {1:0.2f})'\n",
         "             ''.format(i, roc_auc[i]))\n",
-        "    \n",
+        "\n",
         "plt.style.use('ggplot')\n",
         "plt.plot([0, 1], [0, 1], 'k--', lw=lw)\n",
         "plt.xlim([0.0, 1.0])\n",
@@ -807,7 +817,7 @@
         "    plt.plot(fpr[i],tpr[i], color=color, lw=lw,\n",
         "             label='ROC curve of class {0} (area = {1:0.2f})'\n",
         "             ''.format(i, roc_auc[i]))\n",
-        "    \n",
+        "\n",
         "plt.style.use('ggplot')\n",
         "plt.plot([0, 1], [0, 1], 'k--', lw=lw)\n",
         "plt.xlim([0.0, 1.0])\n",
@@ -845,7 +855,7 @@
         "# Student model that is stand-alone. We will evaluate its accuracy compared to a teacher trained student model\n",
         "# Hyperparameters\n",
         "input_shape = (224, 224, 3) # Input shape of each image\n",
-        "nb_classes = 2 \n",
+        "nb_classes = 2\n",
         "\n",
         "customstudent = Sequential()\n",
         "customstudent.add(Conv2D(128, kernel_size=(3, 3),activation='relu', input_shape=input_shape))\n",
@@ -867,7 +877,7 @@
         "\n",
         "print(customstudent.summary())"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,7 +929,7 @@
         "# Collect the logits from the previous layer output and store it in a different model\n",
         "teacher_WO_Softmax = Model(model.input, model.get_layer('dense').output)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +942,7 @@
         "def softmax(x):\n",
         "    return np.exp(x)/(np.exp(x).sum())"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -950,26 +960,26 @@
         "temp = 10\n",
         "# This model directly gives the logits ( see the teacher_WO_softmax model above)\n",
         "teacher_train_logits = teacher_WO_Softmax.predict(x_train)\n",
-        "teacher_test_logits = teacher_WO_Softmax.predict(x_val) \n",
+        "teacher_test_logits = teacher_WO_Softmax.predict(x_val)\n",
         "\n",
         "# Perform a manual softmax at raised temperature\n",
         "train_logits_T = teacher_train_logits/ temp # temp = 10\n",
-        "test_logits_T = teacher_test_logits / temp \n",
+        "test_logits_T = teacher_test_logits / temp\n",
         "\n",
         "Y_train_soft = softmax(train_logits_T)\n",
         "Y_test_soft = softmax(test_logits_T)\n",
         "\n",
-        "# Concatenate \n",
+        "# Concatenate\n",
         "Y_train_new = np.concatenate([y_train, Y_train_soft], axis=1)\n",
         "Y_test_new =  np.concatenate([y_val, Y_test_soft], axis =1)\n",
         "\n",
-        "#Print the Shape \n",
+        "#Print the Shape\n",
         "print(train_logits_T.shape)\n",
         "print(test_logits_T.shape)\n",
         "print(Y_train_new.shape)\n",
         "print(Y_test_new.shape)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1010,7 @@
         "\n",
         "# Now collect the logits from the last layer\n",
         "# This is going to be a tensor. And hence it needs to pass through a Activation layer\n",
-        "logits = customstudent.layers[-1].output \n",
+        "logits = customstudent.layers[-1].output\n",
         "probs = layers.Activation('softmax')(logits)\n",
         "\n",
         "\n",
@@ -1010,12 +1020,12 @@
         "\n",
         "output = concatenate([probs, probs_T])\n",
         "\n",
-        "# This is our new student model \n",
+        "# This is our new student model\n",
         "customstudent = Model(customstudent.input, output)\n",
         "\n",
         "customstudent.summary()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1074,18 +1084,18 @@
       },
       "source": [
         "# Declare knowledge distillation loss function\n",
-        "# This will be a teacher trained student model. \n",
+        "# This will be a teacher trained student model.\n",
         "# This uses a knowledge distillation loss function\n",
         "# Declare knowledge distillation loss\n",
         "def knowledge_distillation_loss(y_true, y_pred, alpha):\n",
         "\n",
         "    # Extract the one-hot encoded values and the softs separately so that we can create two objective functions\n",
         "    y_true, y_true_softs = y_true[: , :nb_classes], y_true[: , nb_classes:]\n",
-        "    \n",
+        "\n",
         "    y_pred, y_pred_softs = y_pred[: , :nb_classes], y_pred[: , nb_classes:]\n",
-        "    \n",
+        "\n",
         "    loss = alpha*logloss(y_true,y_pred) + (1-alpha)*logloss(y_true_softs, y_pred_softs)\n",
-        "    \n",
+        "\n",
         "    return loss\n",
         "\n",
         "# For testing use regular output probabilities - without temperature\n",
@@ -1099,10 +1109,10 @@
         "    optimizer='adadelta',\n",
         "    loss=lambda y_true, y_pred: knowledge_distillation_loss(y_true, y_pred, 0.1),\n",
         "    #loss='categorical_crossentropy',\n",
-        "    metrics=[acc] \n",
+        "    metrics=[acc]\n",
         "  )"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1124,7 +1134,7 @@
         "          verbose=1,\n",
         "          validation_data=(x_val, Y_test_new))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1226,7 +1236,7 @@
         "Y_val_pred_student = customstudent.predict(x_val)\n",
         "print(f'The CustomStudent model Accuracy on the Validation Set:',accuracy_score(np.argmax(y_val, axis=1), np.argmax(Y_val_pred_student, axis=1)))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1250,7 +1260,7 @@
         "#Now let's check my Y_test values\n",
         "print(f'My Y_test values are:\\n' ,Y_test)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1278,7 +1288,7 @@
         "outputId": "4f02a3ef-fae1-42f6-bc31-48656488a004"
       },
       "source": [
-        "#Now let's check my predcited values from X_test dataset\t\n",
+        "#Now let's check my predcited values from X_test dataset\n",
         "import timeit\n",
         "\n",
         "start = timeit.default_timer()\n",
@@ -1289,7 +1299,7 @@
         "stop = timeit.default_timer()\n",
         "print('\\nTime: ',stop - start,'sec')"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1328,7 +1338,7 @@
         "stop = timeit.default_timer()\n",
         "print('\\nTime: ',stop - start,'sec')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1354,7 +1364,7 @@
         "# Classification_report\n",
         "print(f'Classification Report of Resnet50:\\n',classification_report(np.argmax(Y_test, axis=1), np.argmax(y_pred_student, axis=1)))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1417,7 +1427,7 @@
         "    plt.plot(fpr[i],tpr[i], color=color, lw=lw,\n",
         "             label='ROC curve of class {0} (area = {1:0.2f})'\n",
         "             ''.format(i, roc_auc[i]))\n",
-        "    \n",
+        "\n",
         "plt.style.use('ggplot')\n",
         "plt.plot([0, 1], [0, 1], 'k--', lw=lw)\n",
         "plt.xlim([0.0, 1.0])\n",
@@ -1495,7 +1505,7 @@
         "    plt.plot(fpr[i],tpr[i], color=color, lw=lw,\n",
         "             label='ROC curve of class {0} (area = {1:0.2f})'\n",
         "             ''.format(i, roc_auc[i]))\n",
-        "    \n",
+        "\n",
         "plt.style.use('ggplot')\n",
         "plt.plot([0, 1], [0, 1], 'k--', lw=lw)\n",
         "plt.xlim([0.0, 1.0])\n",
