--- a/Teacher&Student.ipynb
+++ b/Teacher&Student.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mshitie/KD-lesions/blob/main/Teacher%26Student.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mshitie/MS_KD/blob/main/Teacher%26Student.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,8 +37,30 @@
         "outputId": "46f2e681-599f-4aed-db71-0d2481a2fb99"
       },
       "source": [
+        "!pip install rarfile\n",
+        "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "import rarfile\n",
+        "import os\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Path to the .rar file in Google Drive\n",
+        "rar_path = '/content/drive/MyDrive/computer_vision/main_data_croped.rar'\n",
+        "\n",
+        "# Destination folder to extract the contents\n",
+        "destination_folder = '/content'\n",
+        "\n",
+        "# Create the destination folder if it doesn't exist\n",
+        "if not os.path.exists(destination_folder):\n",
+        "    os.makedirs(destination_folder)\n",
+        "\n",
+        "# Extract the .rar file\n",
+        "with rarfile.RarFile(rar_path, 'r') as rar_ref:\n",
+        "    rar_ref.extractall(destination_folder)\n",
+        "\n",
+        "print(\"Extraction completed.\")"
       ],
       "execution_count": null,
       "outputs": [
