--- a/knowledge_distillation.ipynb
+++ b/knowledge_distillation.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyO6oP6t6im+WP1nEQ518v6r",
+      "authorship_tag": "ABX9TyP+F0umaWF2ZwFHFl2D1m2O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -30,28 +28,106 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cmCwfeEGNh0N",
-        "outputId": "a037660e-c238-4e61-8f70-5010838aa81d"
+        "outputId": "5774c18d-7454-40f6-8642-7583f0338944"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Requirement already satisfied: rarfile in /usr/local/lib/python3.10/dist-packages (4.1)\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Extraction completed.\n"
           ]
         }
       ],
       "source": [
-        "#Google Drive Permissions\n",
+        "!pip install rarfile\n",
+        "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "import rarfile\n",
+        "import os\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Path to the .rar file in Google Drive\n",
+        "rar_path = '/content/drive/MyDrive/computer_vision/main_data_croped.rar'\n",
+        "\n",
+        "# Destination folder to extract the contents\n",
+        "destination_folder = '/content/data'\n",
+        "\n",
+        "# Create the destination folder if it doesn't exist\n",
+        "if not os.path.exists(destination_folder):\n",
+        "    os.makedirs(destination_folder)\n",
+        "\n",
+        "# Extract the .rar file\n",
+        "with rarfile.RarFile(rar_path, 'r') as rar_ref:\n",
+        "    rar_ref.extractall(destination_folder)\n",
+        "\n",
+        "print(\"Extraction completed.\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import shutil\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Path to the image folder\n",
+        "image_folder = '/content/data/main_data_croped/'\n",
+        "\n",
+        "# Path to the CSV file containing image labels\n",
+        "csv_file = '/content/drive/MyDrive/computer_vision/tfti2.csv'\n",
+        "\n",
+        "# Read the CSV file into a pandas DataFrame\n",
+        "labels_df = pd.read_csv(csv_file)\n",
+        "\n",
+        "# Verify that the CSV file contains at least one row\n",
+        "if labels_df.empty:\n",
+        "    print(\"CSV file is empty. No images to process.\")\n",
+        "    exit()\n",
+        "\n",
+        "# Create a directory to store the labeled image folders\n",
+        "output_folder = '/content/main_data_croped2/'\n",
+        "os.makedirs(output_folder, exist_ok=True)\n",
+        "\n",
+        "# Loop through the DataFrame rows\n",
+        "for index, row in labels_df.iterrows():\n",
+        "    # Extract the image filename and label from the DataFrame\n",
+        "    image_filename = row['key']\n",
+        "    label = row['class']\n",
+        "\n",
+        "    # Create a directory for the label if it doesn't exist\n",
+        "    label_folder = os.path.join(output_folder, str(label))\n",
+        "    os.makedirs(label_folder, exist_ok=True)\n",
+        "\n",
+        "    # Move the image to the corresponding label folder\n",
+        "    source_path = os.path.join(image_folder, image_filename)\n",
+        "    destination_path = os.path.join(label_folder, image_filename)\n",
+        "    shutil.move(source_path, destination_path)"
+      ],
+      "metadata": {
+        "id": "3_EGHwWffghZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8HLo9SX7ToaL"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
